# NeuralNetworksAndroid

./: build.gradle
app/: build.gradle
app/src/androidTest/java/com/sonerik/neuralnetworksandroid/: ApplicationTest.java
app/src/main/: AndroidManifest.xml
app/src/main/_____jni/: BiasNode.cpp  BiasNode.h  InputNode.h  Layer.cpp  Network.cpp  Node.h  network.i  network_wrap.cpp
app/src/main/groovy/com/sonerik/neuralnetworksandroid/: App.groovy
app/src/main/groovy/com/sonerik/neuralnetworksandroid/activities/: MainActivity.groovy
app/src/main/groovy/com/sonerik/neuralnetworksandroid/adapters/: OutputPagerAdapter.groovy  TableAdapter.groovy
app/src/main/groovy/com/sonerik/neuralnetworksandroid/events/: InputLoadedEvent.groovy  NetworkStudyOver.groovy  NetworkStudyOverEvent.groovy  (+1 more)
app/src/main/jni/: BiasNode.cpp  BiasNode.h  CMakeLists.txt  Callback.h  Connection.h  Edge.cpp  Edge.h  InputNode.cpp  InputNode.h  Layer.cpp  Layer.h  LearningResult.h  Net.cpp  Net.h  Network.cpp  Network.h  NetworkTrainer.cpp  NetworkTrainer.h  NeuralNetwork.i  Neuron.cpp  Neuron.h  Node.cpp  Node.h  OutputNode.cpp  OutputNode.h  main.cpp  network.i  neural_network_wrap.cpp  neural_network_wrap.h
app/src/main/res/layout/: activity_main.xml  dialog_settings.xml  fragment_chart.xml  fragment_input.xml  fragment_learning_progress.xml  fragment_load_input.xml  fragment_main.xml  fragment_output.xml  fragment_table.xml  item_output.xml  item_table.xml
app/src/main/res/menu/: main.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml
(+26 files in other folders)
